2008-10-17  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala:

	Add is_fundamental metadata attribute

	* vapi/packages/gstreamer-0.10/:

	Fix GstMiniObject binding

	* vapi/gstreamer-0.10.vapi: regenerated

2008-10-17  Jürg Billeter  <j@bitron.ch>

	* vapigen/Makefile.am:
	* vapigen/valagirparser.vala:
	* vapigen/valamarkupreader.vala:
	* vapigen/valavapigen.vala:

	Add experimental .gir support to vapigen

2008-10-17  Jürg Billeter  <j@bitron.ch>

	* vala/valasymbolresolver.vala:

	Ignore non-type symbols when resolving types

2008-10-17  Jürg Billeter  <j@bitron.ch>

	* vala/valaenumvalue.vala:
	* vala/valainterfacewriter.vala:

	Improve custom cname support for enum values

2008-10-17  Jürg Billeter  <j@bitron.ch>

	* vala/valainterface.vala:
	* gobject/valaccodetypesymbolbinding.vala:

	Fix interface properties in GObject classes

2008-10-17  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeclassbinding.vala:
	* gobject/valaccodegenerator.vala:
	* vapi/glib-2.0.vapi:

	Fix leaks in non-GObject classes,
	based on patch by Andrea Del Signore, fixes bug 554844

2008-10-17  Jürg Billeter  <j@bitron.ch>

	* vala/valabinaryexpression.vala:
	* vala/valaexpression.vala:
	* vala/valamemberaccess.vala:
	* vala/valastringliteral.vala:
	* gobject/valaccodegenerator.vala:

	Extend non-null check when managing memory, fixes bug 530422

2008-10-17  Jürg Billeter  <j@bitron.ch>

	* vala/valabinaryexpression.vala:
	* vala/valaexpression.vala:
	* vala/valaliteral.vala:
	* vala/valamemberaccess.vala:
	* vala/valasemanticanalyzer.vala:
	* gobject/valaccodegenerator.vala:

	Treat the result of two concatenated string constants as constant,
	fixes bug 516287

2008-10-17  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala:
	* gobject/valaccodegenerator.vala:

	Move C-specific string concatenation from semantic analyzer to
	code generator, patch by Andrea Del Signore

2008-10-17  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:
